--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "campuslink",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.86.2",
+    "boxicons": "^2.1.4",
     "framer-motion": "^12.23.25",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
